<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.svvaap.superdrop2.AboutRestaurentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView48"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@+id/textView48">

                    <!-- Restaurant Name -->

                    <!-- Description -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/bunontop_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/curved_shape"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:padding="-35dp"
                                android:src="@drawable/bun_on_top"
                                android:contentDescription="@string/todo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="10dp"
                                android:padding="5dp"
                                android:text="@string/bunontop"
                                android:textColor="#FFFFFF"
                                android:textSize="25sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/w"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/description_a_fast_food_haven_offering_a_delicious_array_of_pizzas_burgers_and_crispy_french_fries_satisfy_your_cravings_with_our_mouthwatering_menu" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/streetwok_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_marginTop="500dp"
                        android:clickable="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/curved_shape"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:contentDescription="@string/rest_img2"
                                android:padding="10dp"
                                android:src="@drawable/streetwok" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="10dp"
                                android:padding="5dp"
                                android:text="@string/streetwok"
                                android:textColor="#FFFFFF"
                                android:textSize="25sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/q"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/description_experience_the_flavors_of_china_at_street_wok_your_go_to_spot_for_savory_noodles_delectable_momos_and_an_enticing_selection_of_chinese_fast_food" />

                    <WebView
                        android:id="@+id/streetwok_web"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/bowlexpress_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/curved_shape"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:padding="5dp"
                                android:src="@drawable/bowlexpress_logo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="10dp"
                                android:padding="5dp"
                                android:text="@string/bowlexpress"
                                android:textColor="#FFFFFF"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/r"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="Description: Bowl Express serves up the perfect combinations of fast-food delights. Enjoy the tantalizing blend of noodles and manchurian and more in every bowl!" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/vadpavexpress_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/curved_shape"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:padding="5dp"
                                android:src="@drawable/vadapavexpress_logo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="10dp"
                                android:padding="5dp"
                                android:text="@string/vada_pav_express"
                                android:textColor="#FFFFFF"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/t"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="Description: Dive into the world of Indian fast food at Vada Pav Express. Savor iconic treats like vada pav, ghee rice kabab, veg thali, and a variety of aromatic teas and coffees." />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/kfc_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/curved_shape"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:padding="5dp"
                                android:src="@drawable/kfc_logo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="10dp"
                                android:padding="5dp"
                                android:text="King Fried Chiken"
                                android:textColor="#FFFFFF"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/u"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="Description: For fried chicken lovers, King Fried Chicken brings you a menu reminiscent of the classics. Enjoy crispy, golden delights that are sure to satisfy your cravings!" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:padding="16dp"
                        android:text="Contact Information"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <!-- Phone Number -->
                    <TextView
                        android:id="@+id/call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="Phone: +91 73043 05584"
                        android:textStyle="bold" />

                    <!-- Address -->
                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="Address: Shambhavi Heights, Church Road, Shirva, Karnataka 574116"
                        android:textStyle="bold|italic" />


                    <!-- Operating Hours -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="Monday-Sunday: 10:00 AM - 10:00 PM" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <!-- restaurant_about_layout.xml for Bun On Top -->


</androidx.constraintlayout.widget.ConstraintLayout>